refactor: make changes to fulfill code requirements

--- a/react-task-1/src/components/Footer/Footer.module.scss
+++ b/react-task-1/src/components/Footer/Footer.module.scss
@@ -1,5 +1,6 @@
 $font-color: #278585;
 $primary-borders: 2px solid #0b3f70;
+$font-stack: 'Lucida Sans', 'Lucida Sans Regular', Verdana, sans-serif;
 
 .footer {
   color: $font-color;
@@ -10,4 +11,6 @@ $primary-borders: 2px solid #0b3f70;
 
   display: flex;
   justify-content: center;
+
+  font-family: $font-stack;
 }
